# serde-ini

./: .travis.yml  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
serde_ini/: all.html  index.html  sidebar-items.js
serde_ini/de/: SectionDeserializer.t.html  enum.Error.html  fn.from_bufread.html  fn.from_read.html  fn.from_str.html  from_bufread.v.html  index.html  sidebar-items.js  struct.Deserializer.html  struct.SectionDeserializer.html  struct.ValueDeserializer.html  trait.Trait.html  type.Result.html
serde_ini/error/: enum.Error.html  index.html  type.Result.html
serde_ini/parse/: OkIter.t.html  enum.Error.html  enum.Item.html  enum.SyntaxError.html  enum.Void.html  index.html  sidebar-items.js  struct.OkIter.html  struct.Parser.html
serde_ini/ser/: UnsupportedType.t.html  enum.Error.html  enum.UnsupportedType.html  fn.to_string.html  fn.to_vec.html  fn.to_writer.html  index.html  sidebar-items.js  struct.MapSerializer.html  struct.Serializer.html  type.Result.html
serde_ini/write/: enum.LineEnding.html  index.html  sidebar-items.js  struct.Writer.html
src/: de.rs  error.rs  lib.rs  parse.rs  ser.rs  write.rs
src/serde_ini/: de.rs.html  error.rs.html  lib.rs.html  parse.rs.html  ser.rs.html  write.rs.html
tests/: de.rs  enum_map_seq.rs  enum_seq.rs  smoke.rs
(+16 files in other folders)
